--- a/ng-fundamentals/src/index.html
+++ b/ng-fundamentals/src/index.html
@@ -1,13 +1,29 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <script>document.write('<base href="' + document.location + '" />');</script>
   <meta charset="utf-8">
-  <title>NgFundamentals</title>
+  <title>Angular Tour of Heroes</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="assets/styles.css" />
+
+  <!-- Polyfill(s) for older browsers -->
+  <script src="https://unpkg.com/core-js@2.4.1/client/shim.min.js"></script>
+
+  <script src="https://unpkg.com/zone.js@0.6.25?main=browser"></script>
+  <script src="https://unpkg.com/reflect-metadata@0.1.3"></script>
+  <script src="https://unpkg.com/systemjs@0.19.27/dist/system.src.js"></script>
+
+  <script src="systemjs.config.js"></script>
+  <script>
+    System.import('app').catch(function (err) { console.error(err); });
+  </script>
 </head>
 <body class="container">
-  <events-app></events-app>
+<my-app>Loading...</my-app>
+<events-app></events-app>
 </body>
 </html>
