--- a/ng-fundamentals/src/index.html
+++ b/ng-fundamentals/src/index.html
@@ -24,7 +24,7 @@
   </script>
 </head>
 <body class="container">
-<my-app>Loading...</my-app>
+<!--<my-app>Loading...</my-app>-->
 <events-app></events-app>
 </body>
 </html>
