--- a/ng-fundamentals/src/index.html
+++ b/ng-fundamentals/src/index.html
@@ -4,7 +4,7 @@
   <script>document.write('<base href="' + document.location + '" />');</script>
   <meta charset="utf-8">
   <title>Ng Fundamentals</title>
-  <base href="/">
+  <base href="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" type="text/css" href="assets/styles.css" />
